Set ErrorHandler to SchemaFactory to get validation errors on incorrect xsd´s.